<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="30sp"

    />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCurrency1"
                android:text="@string/Moneda_1"

        />
        <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etCurrency1"
                android:hint="@string/Currency"

        />


    </LinearLayout>

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spCurrency_1"
                android:entries="@array/Currency_spinner"
                 >


        </Spinner>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btConvertir"
                android:text="@string/Convertir"
        />
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spCurrency_2"
                android:entries="@array/Currency_spinner">


        </Spinner>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCurrency2"
                android:text="@string/tvCurrency_2"

        />
        <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tvResult"

        />


    </LinearLayout>


</LinearLayout>
